// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with config explicit reference 1`] = `
[
  [
    "input.json",
  ],
  [
    "ccac20dc279ee29ab60e",
  ],
  [
    "error  Module ./simple/src/index.ts should not be used  webpack/restricted-modules",
  ],
  [
    "error  Module ./simple/src/index2.ts should not be used  webpack/restricted-modules",
  ],
  [
    "error  Module ./simple/src/sub-module.ts should not be used  webpack/restricted-modules",
  ],
  [
    "error  Module ./simple/src/index2.css should not be used  webpack/restricted-modules",
  ],
  [
    "error  Module ./simple/src/test.txt should not be used  webpack/restricted-modules",
  ],
  [
    "error  Module ./simple/src/dyn.ts should not be used  webpack/restricted-modules",
  ],
  [
    "error  Module ./simple/src/statoscope.png should not be used  webpack/restricted-modules",
  ],
  [
    "error  foo@1.0.0 should not be used  webpack/restricted-packages",
  ],
  [
    "Instances:",
  ],
  [
    "- simple/node_modules/foo  1.0.0",
  ],
  [
    "unknown compilation",
  ],
  [
    "error  Usage of ./node_modules/is-array/index.js was increased from 2 to 4  webpack/diff-deprecated-modules",
  ],
  [
    "error  Usage of external "extLib" was increased from 0 to 1  webpack/diff-deprecated-modules",
  ],
  [
    "error  Usage of ./simple/src/test.txt was increased from 0 to 1  webpack/diff-deprecated-modules",
  ],
  [
    "error  Usage of ./simple/src/statoscope.png was increased from 0 to 2  webpack/diff-deprecated-modules",
  ],
  [
    "error  Usage of is-array was increased from 2 to 4  webpack/diff-deprecated-packages",
  ],
  [
    "",
  ],
  [
    "13 problems (13 errors, 0 warnings)",
  ],
]
`;

exports[`with config explicit reporter 1`] = `
[
  [
    "undefined",
  ],
  [
    "Module ./simple/src/index.ts should not be used",
  ],
  [
    "Module ./simple/src/index2.ts should not be used",
  ],
  [
    "Module ./simple/src/sub-module.ts should not be used",
  ],
  [
    "Module ./simple/src/index2.css should not be used",
  ],
  [
    "Module ./simple/src/test.txt should not be used",
  ],
  [
    "Module ./simple/src/dyn.ts should not be used",
  ],
  [
    "Module ./simple/src/statoscope.png should not be used",
  ],
  [
    "foo@1.0.0 should not be used",
  ],
]
`;

exports[`with config explicit single 1`] = `
[
  [
    "input.json",
  ],
  [
    "ccac20dc279ee29ab60e",
  ],
  [
    "error  Module ./simple/src/index.ts should not be used  webpack/restricted-modules",
  ],
  [
    "error  Module ./simple/src/index2.ts should not be used  webpack/restricted-modules",
  ],
  [
    "error  Module ./simple/src/sub-module.ts should not be used  webpack/restricted-modules",
  ],
  [
    "error  Module ./simple/src/index2.css should not be used  webpack/restricted-modules",
  ],
  [
    "error  Module ./simple/src/test.txt should not be used  webpack/restricted-modules",
  ],
  [
    "error  Module ./simple/src/dyn.ts should not be used  webpack/restricted-modules",
  ],
  [
    "error  Module ./simple/src/statoscope.png should not be used  webpack/restricted-modules",
  ],
  [
    "error  foo@1.0.0 should not be used  webpack/restricted-packages",
  ],
  [
    "Instances:",
  ],
  [
    "- simple/node_modules/foo  1.0.0",
  ],
  [
    "",
  ],
  [
    "8 problems (8 errors, 0 warnings)",
  ],
]
`;
